Changes
-------

1.4.3 (unreleased)
~~~~~~~~~~~~~~~~~~

- ...

1.4.2 (2009-01-05)
~~~~~~~~~~~~~~~~~~

- Automatically ignore ``.pyc`` and ``.pyo`` files while checking for
  modified/added/removed files. [sylvain]

- Fix bug so ``.svn`` directory is really ignored when checking for
  added paths in the checkout directory. [sylvain]

1.4.1 (2008-10-31)
~~~~~~~~~~~~~~~~~~

Bug fix:

- Correct typo in README.txt. [sylvain]

- Ignore ``.svn`` directory when checking for added ones at
  uninstall. [sylvain]

1.4 (2008-10-31)
~~~~~~~~~~~~~~~~

New features:

- Added ``location`` option that allows you to override the default
  /parts/partname location. [reinout]

- Added ``as_eggs`` option that installs the checkouts as development
  eggs. [reinout]

Bug fix:

- Don't export revisions information if you're offline with Py. Py
  tries to connect to the SVN repository to do a 'svn info'. [sylvain]

1.3.1
~~~~~

Bug fix:

- don't try to collect export information if you have a svn
  export. [sylvain]

- path were exported instead of URLs in the Native
  implementation. [sylvain]

1.3
~~~

- Remove the restriction to py 0.9.0, now that py 0.9.2 is out and fix
  problems on svn status with strange userid. [sylvain]

- Correct an error rendering. [sylvain]

- Export information only for top level svn URLs in the native
  implementation, this used to inject information from svn:externals
  links included in URL list. [sylvain]

- Add tests for export information feature. [tlotze]

- Correct URL in setup.py [sylvain].

1.2
~~~

- Refactor code, performances should be better at uninstall with Py
  implementation [sylvain].

- Look for the environment variable ``INFRAE_SUBVERSION_IMPL`` to
  select which implementation to use. Possible values are ``PYSVN``
  (default) and ``PY`` [sylvain].

- Uninstall only look at directory which have been created by the
  recipe in the part. Other are just reported [sylvain].

- Export two new variables, if ``export_info`` is set to true:
